파티클, 코어그래픽(그래프), 첫화면, 상세정보출력, 음성인식 추가

--- a/test1/Info.plist
+++ b/test1/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>음성인식 서비스는 앱에서 음성을 텍스트로 변환하는데 사용됩니다.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>마이크를 사용하여 음성을 텍스트로 변환</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
